# DataPipeline

./: .gitignore  README.md  RUN_ME.bat  pyproject.toml  sxcas.py
chat/: agent_1.md  agent_2.md  agent_3.md  agent_a.md  contracts.md  coordination.md
config/: example_secrets.env  pipeline.yaml
config/datasets/: xau_m1_core_v1.yaml  xau_m1_nonhuman_v1.yaml
config/experiments/: xau_m1_nonhuman_direction_nb_v1.yaml
data/local_data/: README.md
docs/: parallel_dev_architecture.md
feedbacks/: README.md  latest.md
local_data/: README.md
mt5pipe/: __init__.py  __main__.py
mt5pipe/backfill/: engine.py  sync.py
mt5pipe/bars/: builder.py
mt5pipe/catalog/: __init__.py  models.py  sqlite.py
mt5pipe/cli/: app.py  backfill_cmds.py  bar_cmds.py  dataset_cmds.py  live_cmds.py  merge_cmds.py  status_cmds.py  train_cmds.py
mt5pipe/compiler/: __init__.py  manifest.py  models.py  public.py  registry.py  service.py  training.py
mt5pipe/config/: loader.py  models.py
mt5pipe/contracts/: __init__.py  dataset.py  (+4 more)
scripts/: super_pipeline_tui.py
tests/: conftest.py  test_artifact_lineage.py  test_bar_builder.py  test_boundary_imports.py  test_canonical_merge.py  test_catalog.py  test_checkpoint.py  test_compiler.py  test_contracts.py  test_dataset_cli_compat.py  test_dataset_leakage.py  test_dedup.py  test_features_phase3.py  test_features_phase4.py  test_features_phase4_checkpoint.py  test_features_phase5.py  test_labels.py  test_merge_qa.py  test_quality.py  test_schema.py  test_state_boundaries.py  test_state_windows.py  test_training_flow.py  test_truth_core.py
(+77 files in other folders)
