[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mt5pipe"
version = "0.1.0"
description = "Production-grade MetaTrader 5 data pipeline for AI/ML training"
requires-python = ">=3.11"
dependencies = [
    "MetaTrader5>=5.0.45",
    "psutil>=5.9.0",
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "tzdata>=2024.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer[all]>=0.9.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "PyYAML>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.90.0",
]

[project.scripts]
mt5pipe = "mt5pipe.cli.app:app"
mt5pipe-super = "mt5pipe.tools.super_pipeline_tui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["mt5pipe"]
